# latch

./: .gitignore  Cargo.toml  PROJECT.md  README.md
docs/: SPEC.md
migrations/: 001_initial.sql
src/: claims.rs  cli.rs  context.rs  contracts.rs  db.rs  decisions.rs  events.rs  main.rs  notes.rs  output.rs  tasks.rs
tests/: cli_claims.rs  cli_coordination.rs  cli_events.rs  cli_notes.rs  cli_tasks.rs
