[package]
name = "latch"
version = "0.1.0"
edition = "2021"
description = "Project-scoped coordination ledger for collaborating agents"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
thiserror = "2"
whoami = "1"
